[package]
name = "pokeductor"
version = "0.1.0"
edition = "2021"
description = "A terminal-based Pokedex and Evolution Analyzer powered by PokeAPI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Huseynteymurzade28/pokeductor"
homepage = "https://github.com/Huseynteymurzade28/pokeductor"
keywords = ["pokemon", "pokedex", "tui", "ratatui", "cli"]
categories = ["command-line-utilities"]
authors = ["Huseyn Teymurzade <huseynteymurrr74@gmail.com>"]
exclude = ["assets/", ".github/"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
